--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,8 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "http://3.95.64.21:8080/:path*"
+    }
+  ]
+}
